# open-voice-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  FIXES_APPLIED.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  main.py  pyproject.toml  pytest.ini  start.sh
.cursor/rules/: coding-standards.mdc
.streamlit/: config.toml
docs/: ADDING_PROVIDERS.md  ARCHITECTURE.md  CONTRIBUTING.md  TESTING.md
nvidia_services/: .env.example  docker-compose.yml
src/: __init__.py  streamlit_app.py  streamlit_launcher.py
src/agent/: __init__.py  _channel_metrics.py  _langchain_usage_patch.py  _turn_tracer.py  agent.py  graph.py  llm_factory.py  llm_runtime.py  metrics_collector.py  prompts.py  state.py  tool_feedback.py
src/agent/models/: __init__.py  llm_runtime.py  stt_factory.py  tts_factory.py
src/agent/prompts/: __init__.py  assistant.py  runtime.py
src/agent/runtime/: __init__.py  assistant.py  connect_options.py  session.py  tasks.py
src/agent/tools/: __init__.py  feedback.py  pre_tool_feedback.py
src/agent/traces/: __init__.py  channel_metrics.py  errors.py  langfuse.py  metrics_collector.py  text_output_tracing.py  turn_tracer.py
src/api/: __init__.py  livekit_tokens.py  main.py  session_bootstrap.py  streamlit_routes.py  websocket.py
src/core/: __init__.py  dependencies.py  exceptions.py  logger.py  settings.py
src/models/: __init__.py
src/models/voice/: __init__.py  base.py  factory.py  gradium.py  nvidia.py  types.py
src/plugins/: __init__.py
src/plugins/huggingface_llm/: __init__.py  llm.py
src/plugins/moonshine_stt/: __init__.py  stt.py
src/plugins/pocket_tts/: __init__.py  tts.py
src/services/: __init__.py  audio_service.py  conversation_service.py  session_manager.py  transcription_service.py  tts_service.py
src/ui/: index.html  main.js
testing/: asr_moonshine.py  livekit_custom.py  nvidia_.py  pocket_tts_test.py
tests/: conftest.py  test_agent_mcp_runtime.py  test_analyze_traces.py  test_channel_metrics.py  test_langchain_usage_patch.py  test_langfuse_turn_tracing.py  test_llm_stall_watchdog.py  test_logger_config.py  test_nvidia_tts_patch.py  test_pocket_tts_plugin.py  test_runtime_settings.py  test_session_bootstrap.py  test_session_conn_options.py  test_streamlit_footer.py  test_streamlit_routes.py  test_stt_factory.py  test_text_output_tracing.py  test_tool_feedback.py  test_tts_factory.py
tests/unit/: test_llm_factory.py  test_prompts.py  test_services.py  test_session_manager.py
