[project]
name = "open-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "torch==2.10.0",
  "torchvision==0.25.0",
  "torchaudio==2.10.0",
  "nemo_toolkit[asr]",
  "lhotse>=1.24,<1.31",
  "python-dotenv>=1.2.1",
  "livekit-agents[silero,turn-detector]~=1.3",
  "livekit-plugins-noise-cancellation~=0.2",
  "langgraph>=1.0.8",
  "pydantic-settings>=2.12.0",
]
