[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "open-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "opentelemetry-api>=1.34.0,<1.35.0",
  "opentelemetry-sdk>=1.34.0,<1.35.0",
  "opentelemetry-exporter-otlp>=1.34.0,<1.35.0",
  "livekit-agents[silero,turn-detector]>=1.3.3,<1.4",
  "livekit-plugins-noise-cancellation~=0.2",
  "livekit-api==1.1.0",
  "livekit-plugins-langchain",
  "langchain-nvidia-ai-endpoints",
  "langgraph",
  "pocket-tts",
  "scipy",
  "python-dotenv",
  "pydantic-settings",
  "streamlit",
  "transformers @ git+https://github.com/huggingface/transformers.git@7769f660935b5d48b73bf6711d0a78b6f8f98739",

]
